# MedicAI

./: .env.example  .gitignore  README.md  angular.json  docker-compose.dev.yaml  docker-compose.yaml  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  output.html  pyproject.toml
backend/src/app/: main.py
backend/src/app/api/: appointment_controller.py  clinical_history_controller.py  medic_controller.py
backend/src/app/core/: base_repository.py  config.py  constants.py  container.py  database.py  default_data.py
backend/src/app/crosscutting/: authorization.py  logging.py
backend/src/app/domain/model/: appointment.py  clinical_history.py  medic.py
backend/src/app/domain/persistence/: appointment_repository.py  clinical_history_repository.py  medic_repository.py
backend/src/app/mapping/: appointment_mapper.py  clinical_history_mapper.py  medic_mapper.py
backend/src/app/schemas/request/: create_appointment_request.py  create_clinical_history_request.py  medic_create_request.py  medic_update_request.py
backend/src/app/schemas/response/: appointment_response.py  clinical_history_response.py  medic_response.py
backend/src/app/security/api/: auth_controller.py  user_controller.py
backend/src/app/security/mapping/: auth_mapper.py  user_mapper.py
backend/src/app/security/service/: auth_service.py  user_service.py
backend/src/app/service/: appointment_service.py  clinical_history_service.py  email_service.py  medic_service.py
frontend/: Dockerfile
src/: styles.scss
(+48 files in other folders)
