[project]
name = "medicai-backend"
version = "0.1.0"
description = "MedicAI backend service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.2",
    "dependency-injector>=4.48.1",
    "fastapi[standard]>=0.115.14",
    "mysql-connector-python>=9.3.0",
    "paho-mqtt>=2.1.0",
    "passlib[argon2]>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "python-postmark>=0.6.1",
    "reportlab>=4.4.2",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.14",
]
lint = [
    "ruff>=0.12.2",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
line-ending = "lf"

[tool.pyright]
typeCheckingMode = "standard"
ignore = [".venv/Lib/**"]
